--- a/src/app/pages/main/pockets/pockets.component.scss
+++ b/src/app/pages/main/pockets/pockets.component.scss
@@ -19,6 +19,10 @@
     flex: 1 1 auto;
 }
 
+.invalid {
+    color: var(--error-color);
+}
+
 .content {
     max-width: var(--max-width);
     margin: 0 auto;
@@ -41,6 +45,10 @@
     }
 }
 
+.card {
+    padding: 1rem;
+}
+
 .pocket {
     display: flex;
     justify-content: space-between;
@@ -48,11 +56,11 @@
     gap: 5px;
 
     #name {
-        width: 75%;
+        width: 70%;
     }
 
     #percent {
-        width: 25%;
+        width: 30%;
         text-align: center;
     }
 }
@@ -68,6 +76,7 @@
     gap: 1rem;
 
 }
+
 button {
     flex: 1;
     display: flex;
@@ -75,4 +84,10 @@ button {
     justify-content: center;
     gap: 1rem;
     padding: 0.5rem;
+}
+
+.footer {
+    max-width: var(--max-width);
+    margin: 0 auto;
+    width: 100%;
 }
