Se corrige comporatmiento de directiva percent, y se agregan pantallas faltantes con su respectiva navegacion

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -8,7 +8,7 @@
             <mat-icon fontSet="material-symbols-rounded">analytics</mat-icon>
             Panel
         </button>
-        <button class="text-medium" (click)="$event.preventDefault(); goTo('');">
+        <button class="text-medium" (click)="$event.preventDefault(); goTo(Paths.SHOPPING);">
             <mat-icon fontSet="material-symbols-rounded">shopping_bag</mat-icon>
             Compras
         </button>
@@ -34,7 +34,7 @@
                     <mat-icon fontSet="material-symbols-rounded">account_balance_wallet</mat-icon>
                     Mis metodos de pago
                 </button>
-                <button class="text-medium" (click)="$event.preventDefault(); goTo('');">
+                <button class="text-medium" (click)="$event.preventDefault(); goTo(Paths.QUICK_SHOPPING);">
                     <mat-icon fontSet="material-symbols-rounded">shopping_bag_speed</mat-icon>
                     Configurar compras rapidas
                 </button>
@@ -52,7 +52,7 @@
         <mat-icon fontSet="material-symbols-rounded">analytics</mat-icon>
         Panel
     </button>
-    <button class="text-medium" (click)="$event.preventDefault(); goTo('');">
+    <button class="text-medium" (click)="$event.preventDefault(); goTo(Paths.SHOPPING);">
         <mat-icon fontSet="material-symbols-rounded">shopping_bag</mat-icon>
         Compras
     </button>
@@ -72,7 +72,7 @@
         <mat-icon fontSet="material-symbols-rounded">account_balance_wallet</mat-icon>
         Mis metodos de pago
     </button>
-    <button class="text-medium" (click)="$event.preventDefault(); goTo('');">
+    <button class="text-medium" (click)="$event.preventDefault(); goTo(Paths.QUICK_SHOPPING);">
         <mat-icon fontSet="material-symbols-rounded">shopping_bag_speed</mat-icon>
         Configurar compras rapidas
     </button>
