--- a/src/app/components/alert-message/alert-message.component.css
+++ b/src/app/components/alert-message/alert-message.component.css
@@ -1,4 +1,4 @@
-.card{
+.card {
     background-color: var(--background-color);
     border-radius: 20px;
     padding: 2rem;
@@ -6,60 +6,46 @@
     max-width: 400px;
 }
 
-.header{
+.header {
     text-align: center;
 }
 
-h1{
+h1 {
     margin-top: 0;
 }
 
-.close-content{
+.close-content {
     text-align: end;
 }
 
-.close{
+.close {
     font-family: sans-serif;
     cursor: pointer;
 }
 
-.content{
+.content {
     text-align: center;
 }
 
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
     align-items: center;
 }
 
-button{
-    cursor: pointer;
-    border: none;
-    padding: 1rem 0;
-    font-weight: 600;
-    border-radius: 10px;
-    max-width: 300px;
-    width: -webkit-fill-available;
+button {
+    padding: 0.5rem 0;
 }
 
-button:hover{
-    opacity: 50%;
+mat-icon {
+    color: var(--text-color);
+    font-size: 50px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
-
-button.primary{
-    background-color: var(--primary-color);
-    color: var(--on-primary-color);
-}
-
-button.secundary{
-    background-color: transparent;
-    border: 2px solid var(--primary-color);
-    color: var(--primary-color);
-}
-
-button.danger{
-    background-color: red;
-}
-
