se implementa mensaje de confirmacion para eliminar income o pocket

--- a/src/app/components/alert-message/alert-message.component.html
+++ b/src/app/components/alert-message/alert-message.component.html
@@ -6,7 +6,7 @@
         </div>
         }
         @if (iconSrc) {
-            <mat-icon [style]="iconSrc.iconStyle" fontSet="material-symbols-rounded">{{iconSrc.name ?? "info"}}</mat-icon>
+            <mat-icon [style]="iconSrc.iconStyle" fontSet="material-symbols-rounded">{{iconSrc.name}}</mat-icon>
         }
         <h2 class="title-large">{{titleText ?? "Atención"}}</h2>
     </div>
