--- a/src/app/pages/main/income/income.component.scss
+++ b/src/app/pages/main/income/income.component.scss
@@ -53,12 +53,10 @@
 
     button {
         border-radius: 50%;
-        width: 2rem;
-        height: 2rem;
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 0;
+        padding: 0.5rem;
     }
 }
 
