--- a/src/app/pages/main/pockets/pockets.component.scss
+++ b/src/app/pages/main/pockets/pockets.component.scss
@@ -85,6 +85,10 @@ button {
     padding: 0.5rem;
 }
 
+.pocket button {
+    border-radius: 50%;
+}
+
 .footer {
     max-width: var(--max-width);
     margin: 0 auto;
