--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -38,7 +38,9 @@
         }
 
         mat-icon {
-            font-size: 25px;
+            font-size: 30px;
+            width: 30px;
+            height: 30px;
             color: var(--background-color);
         }
 
