[feat] Modifica la lógica de ingresos para manejar cambios no guardados y ajusta el diseño responsivo

--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -114,6 +114,7 @@
             -webkit-tap-highlight-color: transparent;
             font-weight: 500;
             transition: background 0.3s ease;
+            text-wrap: nowrap;
         }
 
         button:hover {
